--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -7,6 +7,11 @@ on:
     branches: [ main ]
 
   workflow_dispatch:
+    inputs:
+      nomDeParamètre:
+        description: 'mon premier paramètre'
+        required: true
+        default: 'hello'
 jobs:
   build:
     runs-on: ubuntu-latest
