--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,6 +12,9 @@ on:
         description: 'mon premier paramètre'
         required: true
         default: 'hello'
+      secondParamètre:
+        description: 'mon deuxième paramètre'
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
